fixed style nav on tablet

--- a/src/styles/blocks/nav-mob.scss
+++ b/src/styles/blocks/nav-mob.scss
@@ -103,4 +103,46 @@
     transform: translateX(0);
     display: flex;
   }
+
+  @media (min-width: 768px) {
+    &__btn-bascet {
+      font-size: 32px;
+      line-height: 46px;
+      &::after {
+        top: -10px;
+        right: -43px;
+        width: 34px;
+        height: 34px;
+
+        font-size: 18px;
+        line-height: 19px;
+        letter-spacing: 0.15em;
+      }
+    }
+
+    &__linc {
+      font-size: 32px;
+      line-height: 46px;
+    }
+
+    &__btn-close {
+      bottom: 40%;
+      right: 10%;
+      font-size: 32px;
+      line-height: 46px;
+
+      &::before {
+        bottom: -13%;
+        left: -107%;
+        font-size: 46px;
+        line-height: 1.2;
+      }
+
+      &::after {
+        bottom: -2%;
+        left: -37%;
+      }
+    }
+
+  }
 }
